# FaceViewer

./: .gitignore  CMakeLists.txt  README.md
cmake/: AutoDetectCudaArch.cmake  FindFreeImage.cmake
scripts/: extract_tensor.py  extract_traj.py
shader/: copy.fp  copy.vp  pc_color.vp  pc_color_scale.fp
src/app/FaceViewer_FLAME/: CMakeLists.txt  FaceViewer_FLAME.cpp
src/cuGaussianSplatting/: CMakeLists.txt  cuGaussianSplatting.cpp  cuGaussianSplatting.h  etc.cu  etc.h  forward.cu  rasterizer_impl.cu  sh_rot.cuh
src/gsutils/: CMakeLists.txt  Transform3.hpp  containers.cpp  containers.h  gs_face.cpp  gs_face.h  io.cpp  io.h  operators.cpp  operators.h
src/utils/: CMakeLists.txt  DoubleClick.cpp  DoubleClick.h  ImageLoader.cpp  ImageLoader.h  Mesh.cpp  Mesh.h  NImage.h  ShaderLoader.cpp  ShaderLoader.h  ShaderManager.cpp  ShaderManager.h  TexturePool.cpp  TexturePool.h  rot.cpp  rot.h
